--- a/package.json
+++ b/package.json
@@ -8,14 +8,24 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-lottie": "^1.2.3",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.0",
+    "tailwindcss": "^3.0.24",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "yarn build && serve -s build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "upgrade": "yarn run upgrade:ncu && yarn run upgrade:install",
+    "upgrade:rm": "rm -Rf node_modules",
+    "upgrade:ncu": "npx npm-check-updates -u",
+    "upgrade:install": "yarn"
   },
   "eslintConfig": {
     "extends": [
