--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-lottie": "^1.2.3",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "serve": "^14.2.0",
     "tailwindcss": "^3.0.24",
     "web-vitals": "^2.1.0"
