--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-icons": "^4.10.1",
     "react-lottie": "^1.2.3",
     "react-minimal-pie-chart": "^8.4.0",
