--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-icons": "^4.10.1",
     "react-lottie": "^1.2.3",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "serve": "^14.2.0",
     "tailwindcss": "^3.0.24",
     "web-vitals": "^2.1.0"
